# Sin

./: Cargo.toml  LICENSE  README.md
src/: errors.rs  main.rs  modules.rs
src/modules/: install.rs  list.rs  reinstall.rs  remove.rs  search.rs
