[package]
name = "sin"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
flate2 = "1.0.35"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tar = "0.4.43"
tokio = { version = "1.42.0", features = ["full"] }
