[package]
name = "sin"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compression = { version = "0.4.18", features = ["tokio", "gzip"] }
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
indicatif = "0.17.9"
reqwest = { version = "0.12.9", default-features = false, features = ["stream", "rustls-tls"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.11"
tokio = { version = "1.42.0", features = ["fs", "rt-multi-thread", "io-util", "macros"] }
tokio-tar = "0.3.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

#Optimization
[profile.release]
opt-level = "z"  
strip = true     
lto = true       
panic = "abort"  
codegen-units = 1 
